--- a/docbuild/api/Scrapbook101core.HelperClasses.yml
+++ b/docbuild/api/Scrapbook101core.HelperClasses.yml
@@ -17,8 +17,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/HelperClasses.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: HelperClasses
     path: ../Scrapbook101core/HelperClasses.cs
     startLine: 12
@@ -61,8 +61,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/HelperClasses.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: BuildPathList
     path: ../Scrapbook101core/HelperClasses.cs
     startLine: 22
@@ -106,8 +106,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/HelperClasses.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: GetGeocode
     path: ../Scrapbook101core/HelperClasses.cs
     startLine: 63
