--- a/docbuild/api/Scrapbook101core.Scrapbook101Configuration.yml
+++ b/docbuild/api/Scrapbook101core.Scrapbook101Configuration.yml
@@ -30,8 +30,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Scrapbook101Configuration
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 10
@@ -73,8 +73,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Current
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 12
@@ -106,8 +106,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: .ctor
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 14
@@ -136,8 +136,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: AddTestAssets
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 19
@@ -171,8 +171,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: ApplicationName
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 20
@@ -206,8 +206,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: AssetBasePath
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 21
@@ -241,8 +241,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: AuthKey
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 22
@@ -276,8 +276,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: BingMapKey
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 23
@@ -311,8 +311,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: CategoryDocumentType
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 24
@@ -346,8 +346,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: CollectionId
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 25
@@ -381,8 +381,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: DatabaseId
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 26
@@ -416,8 +416,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Endpoint
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 27
@@ -451,8 +451,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: ItemDocumentType
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 28
@@ -486,8 +486,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: NoAssetImage
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 29
@@ -521,8 +521,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: TestCategories
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 30
