--- a/docbuild/api/Scrapbook101core.AppVariables.yml
+++ b/docbuild/api/Scrapbook101core.AppVariables.yml
@@ -494,8 +494,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: TestItems
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 34
