--- a/docbuild/api/Scrapbook101core.Scrapbook101Configuration.yml
+++ b/docbuild/api/Scrapbook101core.Scrapbook101Configuration.yml
@@ -556,8 +556,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: TestItems
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 31
